# SHADOW-RANCHXYZ

./: .env.example  .env.local  .gitignore  Anchor.toml  Cargo.toml  NFT_GUIDE.md  README.md  index.html  package-lock.json  package.json  replit.md  tailwind.config.ts  tsconfig.json  vite.config.ts
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1755308802848_1755308802849.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1755310320527_1755310320528.txt  Pasted--Hello-We-need-to-restructure-the-Solana-Developer-Track-to-improve-user-experience-and-focus-on-th-1755535713260_1755535713261.txt  Pasted--Please-perform-two-critical-tasks-to-fix-the-application-First-restructure-the-Solana-lesson-trac-1755536854047_1755536854049.txt  Pasted-Agent-this-is-the-final-implementation-for-the-Cypherpunk-Legacy-track-Your-task-is-to-build-Mod-1753588228306_1753588228306.txt  Pasted-Agent-your-next-task-is-to-build-Module-3-of-the-Cypherpunk-educational-application-titled-From-M-1753585078370_1753585078370.txt  Pasted-Agent-your-next-task-is-to-completely-overhaul-the-Solana-Corps-of-Engineers-coding-challenges-to-1755770828172_1755770828173.txt  Pasted-Agent-your-task-is-to-build-the-initial-version-of-an-interactive-educational-application-using-Rea-1753557324484_1753557324484.txt  Pasted-Agent-your-task-is-to-create-and-implement-a-loading-splash-screen-to-prevent-a-blank-screen-from-s-1755776240945_1755776240946.txt  (+10 more)
client/: index.html
client/src/: App.tsx  (+1 more)
programs/shadow-ranch-program/: Cargo.toml
programs/shadow-ranch-program/src/: lib.rs
server/: firebase-admin.ts  index.ts
src/: App.tsx
(+112 files in other folders)
