[package]
name = "shadow-ranch-program"
version = "0.1.0"
description = "Educational dApp backend program for Shadow Ranch"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_ranch_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.0.0"
