[package]
name = "shadow-ranch-program"
version = "0.1.0"
description = "Educational dApp backend program for Shadow Ranch"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_ranch_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-metadata = "3.2.3"
bincode.workspace = true
